Add font style for: h2, p.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,3 +14,13 @@ button {
 	background-color: #ddffff;
 	color: #0049ff;
 }
+
+p,
+h2 {
+	font-style: italic;
+}
+
+h2 {
+	font-size: 20px;
+	margin-top: 30px;
+}
